--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   border-width: 0;
@@ -23,7 +22,14 @@ h6 {
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
+
+li {
+  border: solid 0.1rem black;
+  margin: 2rem;
+}
+
 svg {
   fill: currentColor;
 }
